--- a/lecture_notes/notes_16-10-2020.md
+++ b/lecture_notes/notes_16-10-2020.md
@@ -18,3 +18,13 @@ Domáca úloha bude aj z kreslenia grafov, čo bude téma dnešnej  prednášky.
 
 Aj tie dostali svoj adresár v repozitári, aby sme si mohli pripomenúť aktuálnu agendu. Budem tieto súbory pred prednáškou a počas nej aktualizovať.
 
+#### Dnešný program
+
+1. Dokončíme základy kódovanie v R, `code/R01_Zaklady.Rmd`
+2. Úvod do vizualizácie, `code/R02_Vizualizacia1.Rmd`
+3. Začneme importovať, `code/RTutorial_Import.Rmd`
+
+Vo voľnom čase si prosím do R doinštalujte balíček `multcomp`, ktorý potrebujeme pre viacnásobné porovnania v 3. časti - lebo okrem importovania tam budeme robiť aj iné dobré veci.
+
+
+
