--- a/lecture_notes/notes_23-10-2020.md
+++ b/lecture_notes/notes_23-10-2020.md
@@ -6,20 +6,41 @@
 
 #### Repozitár
 
-Aby ste mohli používať najnovšie verzie súborov, vždy na začiatku prednášky si prosím zosynchronizujte repozitár. To napríklad v GitHub desktope znamená urobiť `Pull origin` alebo  `Fetch origin`.
+Aby ste mohli používať najnovšie verzie súborov, vždy na začiatku prednášky si prosím zosynchronizujte repozitár. To napríklad v GitHub Desktope znamená urobiť `Pull origin` alebo  `Fetch origin`.
 
 #### Domáca úloha
 
-Nedostal som ani jeden Rmd súbor. Boli nejaké problémy?
-
 Domácu úlohu z kreslenia grafov som bohužiaľ nestihol zavčasu pripraviť.
+
+##### Ako doručiť domácu úlohu
+
+Existuje niekoľko možností. 
+
+1. Ste iba tri, môžete mi súbory poslať e-mailom. To je síce praktické,, ale nie výchovné.
+
+2. Zriaďte si svoj repozitár a pošlite mi link. Prácnejšie, trocha výchovné.
+
+3. Čisté riešenie sa volá `pull request`. Je to žiadosť o prijatie navrhovaných zmien do hlavného repozitára. Pozostáva zo 4 krokov:
+
+   - Stiahnete si repozitár z GitHubu k sebe na počítač. 
+   - V GitHub Desktope vytvoríte vetvu - `branch` - teda osobitnú verziu celého repozitára. Menu `Branch -> New branch`. Do nej urobíte požadované zmeny, teda pridáte svoj súbor s domácou úlohou. 
+   - V GitHub Desktope vytvoríte `pull request`,  menu `Branch -> Create pull request`. GitHub ma upovedomí o vašej žiadosti, ja ju schválim a urobím `Merge` - teda operáciu, pri ktorej sa vaše zmeny premietnu do hlavného repozitára. 
+   - Vy svoju vetvu potom zmažete a urobíte `pull` v `mastter` vetvi - vaše zmeny sa objavia v hlavnom repozitári. 
+
+   Toto vyzerá dosť zložito, a naozaj sa to v podstate neoplatí robiť pre pridanie jedného súboru.  Navyše tu je administrátorská otázka, či chcem mať v hlavnom repozitári vypracované domáce úlohy. Myslím, že nechcem :-) Takže navrhujem postupovať podľa bodu 2, v prípade potreby podľa bodu 1. 
 
 #### Dnešný program
 
 3. Importujeme, `code/RTutorial_Import.Rmd`. Ideme s našim príkladom RT-PCR, bude aj trocha analýzy, a nakoniec budeme importovať z Excelu.
 2. `tidyverse` - organizácia dát, manipulácia s tabuľkami.
 
+Poprosím o doinštalovanie balíčka `nycflights13`. Je to dátový balíček s dátami o letoch z newyorských letísk v roku 2013. Budeme ho potrebovať pre rozprávanie o manipulácii s dátami pomocou `tidyverse`.
 
+
+
+### Výsledok
+
+Skončili sme import, ale k tidyversu sme sa zatiaľ nedostali. 
 
 
 
